refactor LLM providers, generator UI and preferences loading